# OpenFiles

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  openfiles.example.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/openfiles-cli/: Cargo.toml
crates/openfiles-cli/src/: main.rs
crates/openfiles-core/: Cargo.toml
crates/openfiles-core/src/: cache.rs  config.rs  engine.rs  error.rs  lib.rs  metadata.rs  sync.rs  types.rs  vendor.rs
crates/openfiles-core/src/backend/: local.rs  mod.rs  opendal_backend.rs
crates/openfiles-core/tests/: local_engine.rs
crates/openfiles-fuse/: Cargo.toml
crates/openfiles-fuse/src/: main.rs
crates/openfiles-server/: Cargo.toml
crates/openfiles-server/src/: distributed.rs  main.rs
crates/openfiles-wasmcloud-host/: Cargo.toml
crates/openfiles-wasmcloud-host/src/: main.rs
docs/: README.md  architecture.md  dev-experience.md  http-api.md  performance.md  s3-files-analysis.md  standard.md  vendor-matrix.md  wasmcloud.md
examples/: docker-compose.yml  kubernetes-openfiles-sidecar.yaml
examples/bindings/go/: openfiles_client.go
examples/bindings/python/: openfiles_client.py
examples/bindings/rust/: openfiles_client.rs
examples/bindings/typescript/: openfiles-client.ts
examples/configs/: aws-s3.toml  azure-blob.toml  gcp-gcs.toml  minio.toml  netapp-storagegrid.toml  s3-compatible.toml  storj.toml  tencent-cos.toml  vercel-blob.toml
examples/wasmcloud/: README.md  hostgroup-with-openfiles-volume.yaml  workload-http-list-files.yaml
examples/wasmcloud/components/http-list-files/: Cargo.toml  README.md
examples/wasmcloud/components/http-list-files/src/: lib.rs
examples/wasmcloud/components/http-list-files/wit/: world.wit
scripts/: dev-minio.sh  package.sh  smoke-local.sh
wit/: README.md  openfiles.wit
