[workspace]
members = [
  "crates/openfiles-core",
  "crates/openfiles-cli",
  "crates/openfiles-server",
  "crates/openfiles-fuse",
  "crates/openfiles-wasmcloud-host",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OpenFiles Contributors"]
repository = "https://github.com/openfiles/openfiles"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
futures = "0.3"
hex = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
libc = "0.2"
opendal = { version = "0.55", features = ["services-fs", "services-s3", "services-gcs", "services-azblob", "services-vercel-blob"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "sync", "signal", "net"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
fuser = "0.15"
wit-bindgen = "0.36"
