[package]
name = "openfiles-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openfiles"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
openfiles-core = { path = "../openfiles-core", features = ["opendal-backend"] }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
