[package]
name = "openfiles-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openfiles-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
openfiles-core = { path = "../openfiles-core", features = ["opendal-backend"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
